--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,11 @@
             <artifactId>rhino-js-engine</artifactId>
             <version>1.7.7.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.bramp.ffmpeg</groupId>
+            <artifactId>ffmpeg</artifactId>
+            <version>0.7.0</version>
+        </dependency>
     </dependencies>
 
 </project>
